--- a/giveMeThatIdea_client/package.json
+++ b/giveMeThatIdea_client/package.json
@@ -12,6 +12,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
+    "react-redux-toastr": "^4.2.2",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
