--- a/giveMeThatIdea_server/package.json
+++ b/giveMeThatIdea_server/package.json
@@ -16,6 +16,7 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
+    "postmark": "^1.3.1",
     "validator": "^6.2.0"
   },
   "devDependencies": {
