--- a/giveMeThatIdea_client/package.json
+++ b/giveMeThatIdea_client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "lodash": "^4.17.2",
+    "moment": "^2.17.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
