--- a/giveMeThatIdea_client/package.json
+++ b/giveMeThatIdea_client/package.json
@@ -1,15 +1,20 @@
 {
   "name": "getmeanidea_client",
   "version": "0.1.0",
+  "homepage": "https://givemethatidea.com",
   "private": true,
   "devDependencies": {
+    "now": "^0.37.0",
     "react-scripts": "0.8.4",
     "redux-logger": "^2.7.4"
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "express": "^4.14.0",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
+    "morgan": "^1.7.0",
+    "nodemon": "^1.11.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
@@ -26,9 +31,11 @@
     "validator": "^6.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "nodemon server",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build"
   }
 }
