--- a/giveMeThatIdea_server/package.json
+++ b/giveMeThatIdea_server/package.json
@@ -14,6 +14,7 @@
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
+    "passport-github2": "^0.1.10",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
     "postmark": "^1.3.1",
